No spring parent pom. Build as war or jar